UIUX-346: fix overflow of enum pills in select2

--- a/sugarcrm/styleguide/less/sugar-specific/select2.less
+++ b/sugarcrm/styleguide/less/sugar-specific/select2.less
@@ -20,8 +20,8 @@
     }
   }
   .select2-choices {
-    padding: 3px 4px 3px 0;
-    min-height: 24px;
+    padding: 2px 4px 2px 0;
+    min-height: 22px;
     border: 1px solid @inputBorder;
     background-image: none;
     .border-radius(3px);
@@ -39,7 +39,7 @@
   &.select2-choices-pills .select2-search-choice,
   &.select2-container-multi.select2-choices-pills-close .select2-search-choice {
     padding: 0;
-    margin: 4px 0 2px 4px;
+    margin: 3px 0 3px 4px;
     font-size: 12px;
     background: none !important;
     border: none;
